<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="60dp"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="325dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img2_1"
            android:layout_gravity="center"
            android:id="@+id/rain_back" />

    </LinearLayout>

<EditText
    android:id="@+id/edittext_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@drawable/edit"
    android:hint="@string/email_id"
    android:inputType="textEmailAddress"
    android:padding="12dp"
    android:textSize="16sp"/>


    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:text="@string/register"
        android:textSize="16sp">

    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/already_registered"
            android:id="@+id/al_reg"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#04ea00"
            android:textSize="16sp"
            android:text="@string/login" />

    </LinearLayout>

</LinearLayout>