<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    android:gravity="center_horizontal"
    android:layout_marginTop="110dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/abc"
            android:layout_gravity="center"
            android:id="@+id/rainbow_background"/>

    </LinearLayout>


   <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">



        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="16sp">

        </EditText>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:text="@string/login"
        android:textSize="16sp">

    </Button>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:text="@string/not_registered"
            android:id="@+id/textview_notregister">

        </TextView>


        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#04ea00"
            android:text="@string/register"/>

    </LinearLayout>

</LinearLayout>


